now we can add image in article content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16445,7 +16445,11 @@ td {
 }
 
 html * {
-  font-family: Nunito;
+  font-family: IranSanse;
+}
+
+.fontNunito {
+  font-family: Nunito !important;
 }
 
 .loginregisterinput {
