modify articleadd and product managment and folder of filemanager

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16471,6 +16471,34 @@ td {
   text-align: center;
 }
 
+.btn-info {
+  color: white;
+}
+
+.fa-edit {
+  color: #0a5ed4;
+}
+
+.fa-stream,
+.fa-clipboard-list,
+.fa-check-circle {
+  color: #28a343;
+}
+
+.fa-file-pdf,
+.fa-ban,
+.fa-times-circle {
+  color: #cf1c07;
+}
+
+.fa-steam {
+  color: #a126a6;
+}
+
+.fa-images {
+  color: #199aaa;
+}
+
 .loginregisterinput {
   top: -29px;
   left: 0;
