almost complete front of icons and starts filtering products

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import '~vue2-dropzone/dist/vue2Dropzone.min.css';
 
 
 // Variables
